# django-semantic-forms

./: .gitignore  AGENTS.md  README.md  biome.json  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
demo/: .env.sample  tasks.py
demo/demo/: settings.py  urls.py
demo/demo_app/: apps.py  forms.py  views.py
demo/demo_app/templates/: semantic_forms.html
filters/: __init__.py  filters.py
semantic_forms/: __init__.py  fields.py  forms.py  widgets.py
semantic_forms/filters/: filters.py  filterset.py
semantic_forms/static/semantic_forms/: semanticCalendar.js  semanticCheckbox.js  semanticChooser.js  semanticDropdown.js  semanticTranslatedCalendar.js  semanticUntranslatedCalendar.js  unsemantic.css
semantic_forms/templates/semantic_forms/: base.html
semantic_forms/templates/semantic_forms/demo/: kitchen_sink.html
semantic_forms/templates/semantic_forms/forms/: semantic_form.html
semantic_forms/templates/semantic_forms/forms/widgets/: checkbox_option.html  checkbox_select.html  chooser.html  clearable_file_input.html  date.html  datetime.html  input_autocomplete_off.html  input_option.html  multiwidget.html  radio.html  radio_option.html  select.html  select_time.html  textarea.html  time.html  url.html
semantic_forms/templates/semantic_ui/forms/: semantic_form.html
semantic_forms/templates/semantic_ui/forms/widgets/: checkbox_option.html  radio.html
semantic_forms/templatetags/: semantic_forms.py
semantic_forms/tests/: test_demo.py  test_fields.py  test_templatetags.py  test_widgets.py
tests/js/: semanticCalendar.test.js
