[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "django-semantic-forms"
version = "0.1.10"
description = "Django Semantic UI forms"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Alex", email = "globophobe@gmail.com" }]
keywords = ["django", "semantic", "forms"]
classifiers = [
    "Framework :: Django",
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
]
dependencies = [
    "django>=4.2",
]

[project.optional-dependencies]
filters = [
    "django-filter",
]

[project.urls]
Homepage = "https://github.com/globophobe/django-semantic-forms"
Repository = "https://github.com/globophobe/django-semantic-forms"

[dependency-groups]
dev = [
    "djlint>=1.36.4",
    "django-debug-toolbar>=4.2.0",
    "python-dotenv>=1.1.1",
    "ruff>=0.15.2",
]

[tool.djlint]
profile = "django"

[tool.hatch.build.targets.wheel]
packages = ["semantic_forms"]

[tool.hatch.build.targets.wheel.force-include]
"demo/demo_app" = "semantic_forms/docs"

[tool.uv]
exclude-newer = "P7D"
